[gd_scene format=3 uid="uid://dcf86iwg6mn3d"]

[ext_resource type="Script" uid="uid://df3do7nvg4as7" path="res://scenes/menus/story_mode_menu.gd" id="1_el8f4"]
[ext_resource type="FontFile" uid="uid://dipxuxqymub2c" path="res://assets/fonts/vcr-jp.ttf" id="2_3esc8"]
[ext_resource type="Script" uid="uid://djsxumpddydxq" path="res://scripts/autoload/conductor.gd" id="2_nlhku"]
[ext_resource type="Script" uid="uid://bfydji5l6juhk" path="res://scenes/menus/story_menu/props_container.gd" id="3_64j2x"]
[ext_resource type="Script" uid="uid://ceghwb3yjt8wp" path="res://scenes/menus/story_menu/songs_label.gd" id="3_552ey"]
[ext_resource type="Texture2D" uid="uid://vbft4ijb0s4b" path="res://assets/menus/story_menu/weeks/tutorial.png" id="4_3r44s"]
[ext_resource type="Texture2D" uid="uid://bsjowh7qqed78" path="res://assets/menus/story_menu/difficulties/normal.png" id="4_j0vh7"]
[ext_resource type="Script" uid="uid://bp07frgyvgscl" path="res://scenes/menus/story_menu/weeks.gd" id="4_owtj4"]
[ext_resource type="Texture2D" uid="uid://g4kew3bfwjeq" path="res://assets/menus/story_menu/weeks/week1.png" id="5_1dfdl"]
[ext_resource type="Script" uid="uid://xcwf8fppek0h" path="res://scripts/animated_sprite.gd" id="5_61vqd"]
[ext_resource type="SpriteFrames" uid="uid://dgm7jwe1ek04e" path="res://assets/menus/story_menu/arrows.res" id="6_kynlf"]
[ext_resource type="Script" uid="uid://btmma2a3qu1e6" path="res://scenes/menus/story_menu/week_node.gd" id="6_qh5s5"]
[ext_resource type="PackedScene" uid="uid://cl6aifhbol57q" path="res://scenes/menus/story_menu/props/bf.tscn" id="8_2yyv5"]
[ext_resource type="Script" uid="uid://cy73q76dmhvie" path="res://scripts/menus/story_week_props.gd" id="9_fjedh"]
[ext_resource type="PackedScene" uid="uid://bmjlw8331xjs2" path="res://scenes/menus/story_menu/props/dad.tscn" id="12_ydl1e"]
[ext_resource type="Script" uid="uid://df2o86ah3b60w" path="res://scripts/resources/difficulty_map.gd" id="13_8k8d1"]
[ext_resource type="PackedScene" uid="uid://dltbn2kviddy8" path="res://scenes/menus/story_menu/props/gf.tscn" id="13_h6fec"]
[ext_resource type="Script" uid="uid://y50dwtv7v34j" path="res://scenes/menus/story_menu/difficulties.gd" id="13_w5bhr"]
[ext_resource type="Texture2D" uid="uid://ci8xeupe8nkh6" path="res://assets/menus/story_menu/weeks/week4.png" id="14_4twhc"]
[ext_resource type="Texture2D" uid="uid://butmkemg2qi0g" path="res://assets/menus/story_menu/weeks/week2.png" id="14_6iroa"]
[ext_resource type="PackedScene" uid="uid://bl4osqppv4p3j" path="res://scenes/menus/story_menu/props/mom.tscn" id="15_h4pin"]
[ext_resource type="PackedScene" uid="uid://eeh8q36snnag" path="res://scenes/menus/story_menu/props/spooky.tscn" id="15_nakdl"]
[ext_resource type="Texture2D" uid="uid://cebpbhg2jc6ic" path="res://assets/menus/story_menu/weeks/week3.png" id="16_rx72u"]
[ext_resource type="PackedScene" uid="uid://hs0eb1ifd534" path="res://scenes/menus/story_menu/props/pico.tscn" id="17_5noim"]
[ext_resource type="Texture2D" uid="uid://dxbb2esycsfwo" path="res://assets/menus/story_menu/difficulties/easy.png" id="22_8au17"]
[ext_resource type="Texture2D" uid="uid://b4sb7d2chuirx" path="res://assets/menus/story_menu/difficulties/hard.png" id="24_f5xgx"]
[ext_resource type="Texture2D" uid="uid://bp5mka3gbwa88" path="res://assets/menus/story_menu/difficulties/erect.png" id="25_hkev1"]
[ext_resource type="SpriteFrames" uid="uid://hi7e85v5yo4a" path="res://assets/menus/story_menu/difficulties/nightmare.res" id="27_hkev1"]

[sub_resource type="Gradient" id="Gradient_f5xgx"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_hkev1"]
gradient = SubResource("Gradient_f5xgx")
fill_to = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kq7xu"]
font = ExtResource("2_3esc8")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_uaspw"]
font = ExtResource("2_3esc8")
font_size = 24
font_color = Color(0.929688, 0.403107, 0.625258, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c4fjc"]
font = ExtResource("2_3esc8")
font_size = 24
font_color = Color(0.929688, 0.403107, 0.625258, 1)

[sub_resource type="Resource" id="Resource_imiqu"]
script = ExtResource("9_fjedh")
center = ExtResource("8_2yyv5")
right = ExtResource("13_h6fec")

[sub_resource type="Resource" id="Resource_ru6mx"]
script = ExtResource("9_fjedh")
left = ExtResource("12_ydl1e")
center = ExtResource("8_2yyv5")
right = ExtResource("13_h6fec")

[sub_resource type="Resource" id="Resource_81ca5"]
script = ExtResource("13_8k8d1")
mapping = Dictionary[StringName, StringName]({
&"erect": &"_erect",
&"nightmare": &"_erect"
})

[sub_resource type="Resource" id="Resource_5noim"]
script = ExtResource("9_fjedh")
left = ExtResource("15_nakdl")
center = ExtResource("8_2yyv5")
right = ExtResource("13_h6fec")

[sub_resource type="Resource" id="Resource_nlhku"]
script = ExtResource("9_fjedh")
left = ExtResource("17_5noim")
center = ExtResource("8_2yyv5")
right = ExtResource("13_h6fec")

[sub_resource type="Resource" id="Resource_4twhc"]
script = ExtResource("9_fjedh")
left = ExtResource("15_h4pin")
center = ExtResource("8_2yyv5")
right = ExtResource("13_h6fec")

[sub_resource type="Gradient" id="Gradient_nlhku"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5oacg"]
gradient = SubResource("Gradient_nlhku")
fill_to = Vector2(0, 1)

[node name="story_mode_menu" type="Control" unique_id=1700712844]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_el8f4")
metadata/_edit_lock_ = true

[node name="conductor" type="Node" parent="." unique_id=1365763560]
unique_name_in_owner = true
script = ExtResource("2_nlhku")
metadata/_custom_type_script = "uid://djsxumpddydxq"

[node name="background_color" type="ColorRect" parent="." unique_id=2052416452]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="week_color" type="ColorRect" parent="." unique_id=1790402908]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 56.0
offset_bottom = -264.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.9764706, 0.8117647, 0.31764707, 1)

[node name="props" type="Control" parent="." unique_id=787446284]
unique_name_in_owner = true
clip_contents = true
anchors_preset = 0
offset_top = 56.0
offset_right = 1280.0
offset_bottom = 456.0
script = ExtResource("3_64j2x")

[node name="backdrop" type="Node2D" parent="props" unique_id=1582750622]
position = Vector2(640, 200)

[node name="left" type="Node2D" parent="props" unique_id=1091075869]
position = Vector2(280, 200)

[node name="center" type="Node2D" parent="props" unique_id=1118708715]
position = Vector2(640, 200)

[node name="right" type="Node2D" parent="props" unique_id=1855682713]
position = Vector2(1000, 200)

[node name="week_gradient" type="TextureRect" parent="." unique_id=406475865]
unique_name_in_owner = true
modulate = Color(0.9764706, 0.8117647, 0.31764707, 1)
layout_mode = 0
offset_top = 440.0
offset_right = 1280.0
offset_bottom = 456.0
texture = SubResource("GradientTexture2D_hkev1")
expand_mode = 1

[node name="left_side" type="TextureRect" parent="week_gradient" unique_id=2002696452]
layout_mode = 0
offset_top = -400.0
offset_right = 400.0
offset_bottom = -384.0
rotation = 1.5707964
pivot_offset = Vector2(0, 16)
texture = SubResource("GradientTexture2D_hkev1")
expand_mode = 1

[node name="right_side" type="TextureRect" parent="week_gradient" unique_id=1029494885]
layout_mode = 0
offset_left = 1280.0
offset_right = 1680.0
offset_bottom = 16.0
rotation = -1.5707964
pivot_offset = Vector2(0, 16)
texture = SubResource("GradientTexture2D_hkev1")
expand_mode = 1

[node name="top_bar" type="Control" parent="." unique_id=102546961]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 56.0
grow_horizontal = 2

[node name="background" type="ColorRect" parent="top_bar" unique_id=1348824300]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 56.0
color = Color(0, 0, 0, 1)

[node name="high_score" type="Label" parent="top_bar" unique_id=1403253543]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 16.0
offset_right = 631.0
grow_vertical = 2
text = "High Score: N/A"
label_settings = SubResource("LabelSettings_kq7xu")
vertical_alignment = 1

[node name="week_name" type="Label" parent="top_bar" unique_id=236678733]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.75)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -649.0
offset_right = -16.0
grow_horizontal = 0
grow_vertical = 2
label_settings = SubResource("LabelSettings_kq7xu")
horizontal_alignment = 2
vertical_alignment = 1
visible_characters_behavior = 1

[node name="bottom" type="Control" parent="." unique_id=1165625928]
clip_contents = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -264.0
grow_horizontal = 2
grow_vertical = 0

[node name="songs" type="Control" parent="bottom" unique_id=264472232]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 376.0
grow_vertical = 2

[node name="top_label" type="Label" parent="bottom/songs" unique_id=1604576896]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 24.0
offset_right = -4.0
offset_bottom = 48.0
grow_horizontal = 2
text = "TRACKS"
label_settings = SubResource("LabelSettings_uaspw")
horizontal_alignment = 1

[node name="songs_label" type="Label" parent="bottom/songs" unique_id=1991165176]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -198.0
offset_right = -4.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_c4fjc")
horizontal_alignment = 1
max_lines_visible = 8
script = ExtResource("3_552ey")

[node name="timer" type="Timer" parent="bottom/songs/songs_label" unique_id=1927057657]
wait_time = 0.5
autostart = true

[node name="weeks" type="Control" parent="bottom" unique_id=288261092]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -264.0
offset_top = 16.0
offset_right = 200.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_owtj4")

[node name="tutorial" type="TextureRect" parent="bottom/weeks" unique_id=575870488]
layout_mode = 0
offset_right = 456.0
offset_bottom = 82.0
grow_horizontal = 2
texture = ExtResource("4_3r44s")
stretch_mode = 5
script = ExtResource("6_qh5s5")
songs = PackedStringArray("tutorial")
difficulties = PackedStringArray("easy", "normal", "hard")
display_name = &"Teaching Time"
props = SubResource("Resource_imiqu")

[node name="week_1" type="TextureRect" parent="bottom/weeks" unique_id=126895427]
layout_mode = 0
offset_top = 90.0
offset_right = 456.0
offset_bottom = 179.0
grow_horizontal = 2
texture = ExtResource("5_1dfdl")
stretch_mode = 5
script = ExtResource("6_qh5s5")
songs = PackedStringArray("bopeebo", "fresh", "dad_battle")
difficulties = PackedStringArray("easy", "normal", "hard", "erect", "nightmare")
display_name = &"Daddy Dearest"
props = SubResource("Resource_ru6mx")
difficulty_suffixes = SubResource("Resource_81ca5")

[node name="week_2" type="TextureRect" parent="bottom/weeks" unique_id=1760566944]
layout_mode = 0
offset_top = 191.0
offset_right = 456.0
offset_bottom = 280.0
grow_horizontal = 2
texture = ExtResource("14_6iroa")
stretch_mode = 5
script = ExtResource("6_qh5s5")
songs = PackedStringArray("spookeez", "south", "monster")
difficulties = PackedStringArray("easy", "normal", "hard")
display_name = &"Spooky Month"
props = SubResource("Resource_5noim")
difficulty_suffixes = SubResource("Resource_81ca5")

[node name="week_3" type="TextureRect" parent="bottom/weeks" unique_id=404453370]
layout_mode = 0
offset_top = 255.0
offset_right = 456.0
offset_bottom = 344.0
grow_horizontal = 2
texture = ExtResource("16_rx72u")
stretch_mode = 5
script = ExtResource("6_qh5s5")
songs = PackedStringArray("pico", "philly_nice", "blammed")
difficulties = PackedStringArray("easy", "normal", "hard", "erect", "nightmare")
display_name = &"Pico"
props = SubResource("Resource_nlhku")
difficulty_suffixes = SubResource("Resource_81ca5")

[node name="week_4" type="TextureRect" parent="bottom/weeks" unique_id=365844322]
layout_mode = 0
offset_top = 374.0
offset_right = 456.0
offset_bottom = 463.0
texture = ExtResource("14_4twhc")
stretch_mode = 5
script = ExtResource("6_qh5s5")
songs = PackedStringArray("satin_panties", "high", "milf")
difficulties = PackedStringArray("easy", "normal", "hard")
display_name = &"Mommy Must Murder"
props = SubResource("Resource_4twhc")
difficulty_suffixes = SubResource("Resource_81ca5")

[node name="gradient_cover" type="TextureRect" parent="bottom" unique_id=247310096]
layout_mode = 1
offset_left = 376.0
offset_right = 840.0
offset_bottom = 64.0
texture = SubResource("GradientTexture2D_5oacg")
expand_mode = 1

[node name="difficulties" type="Control" parent="bottom" unique_id=1872210390]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -440.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("13_w5bhr")
textures = Dictionary[StringName, Texture2D]({
&"easy": ExtResource("22_8au17"),
&"erect": ExtResource("25_hkev1"),
&"hard": ExtResource("24_f5xgx"),
&"normal": ExtResource("4_j0vh7")
})
sprite_frames = Dictionary[StringName, SpriteFrames]({
&"nightmare": ExtResource("27_hkev1")
})
metadata/_edit_lock_ = true

[node name="difficulty" type="Sprite2D" parent="bottom/difficulties" unique_id=418640635]
position = Vector2(220, 132)
texture = ExtResource("4_j0vh7")

[node name="animated" type="AnimatedSprite2D" parent="bottom/difficulties/difficulty" unique_id=929830569]
visible = false
sprite_frames = ExtResource("27_hkev1")
animation = &"idle"
script = ExtResource("5_61vqd")

[node name="left_arrow" type="AnimatedSprite2D" parent="bottom/difficulties" unique_id=1559551709]
position = Vector2(32, 132)
sprite_frames = ExtResource("6_kynlf")
animation = &"leftIdle"
script = ExtResource("5_61vqd")

[node name="right_arrow" type="AnimatedSprite2D" parent="bottom/difficulties" unique_id=1207021250]
position = Vector2(408, 132)
sprite_frames = ExtResource("6_kynlf")
animation = &"rightIdle"
script = ExtResource("5_61vqd")

[connection signal="timeout" from="bottom/songs/songs_label/timer" to="bottom/songs/songs_label" method="_tick"]
